<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="IndexSequenceState" Id="{ce85cd05-6efc-434a-9ea4-df6144a01750}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE IndexSequenceState :
(
	Init := 0,                                               
	Available := 1,
	MovingToStart := 2, 
	AtStart := 3,                                 
	MovingToStation := 4,
	QueuedAtStation := 5,
	AtStation := 6,
	AtProcess := 7,
	InProcess := 8,
	GetNextMove := 9,
	GoToNextStation := 10,
	Stopping := 11,
	Aborting := 12
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>